--- a/Plan_Cabinet/Views/PdfViewerPage.xaml
+++ b/Plan_Cabinet/Views/PdfViewerPage.xaml
@@ -19,7 +19,8 @@
         <Grid Grid.Row="0">
             <pdfViewer:SfPdfViewer x:Name="pdfViewer"
                        DocumentSource="{Binding PdfStreamSource}"
-                                   DocumentLoaded="OnPdfViewerDocumentLoaded"
+                       DocumentLoaded="OnPdfViewerDocumentLoaded"
+                       PageNumber="{Binding PageNumber, Mode=TwoWay}"
                        SizeChanged="OnPdfViewerSizeChanged">
             </pdfViewer:SfPdfViewer>
         </Grid>
